ドキュメントモジュール .float_image を .float_media に変更。

--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -215,14 +215,14 @@
 
 
 
-<h2>回り込み画像 .float_image</h2>
+<h2>回り込み画像 .float_media</h2>
 <h3>1/2画像右回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-r1of2">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-r1of2">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、半分の幅で右に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -236,27 +236,27 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-r1of2&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-r1of2&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 <h3>1/3画像右回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-r1of3">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-r1of3">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、33%の幅で右に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -270,27 +270,27 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-r1of3&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-r1of3&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 <h3>1/4画像右回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-r1of4">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-r1of4">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、25%の幅で右に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -304,27 +304,27 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-r1of4&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-r1of4&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 <h3>1/2画像左回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-l1of2">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-l1of2">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、半分の幅で左に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -338,27 +338,27 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-l1of2&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-l1of2&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 <h3>1/3画像左回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-l1of3">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-l1of3">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、33%の幅で左に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -372,27 +372,27 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-l1of3&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-l1of3&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 <h3>1/4画像左回り込み</h3>
-<div class="unit float_image">
-	<div class="float_image-l1of4">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-l1of4">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body">
+	<div class="float_media-body">
 		<p>
 			ここは本文ブロックです。このサンプルは、25%の幅で左に回りこむ画像をレイアウトするものです。<br />
 		</p>
@@ -406,30 +406,30 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-l1of4&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-l1of4&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body&quot;&gt;
+	&lt;div class=&quot;float_media-body&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 
 <h3>本文部分を矩形に保つ</h3>
-<div class="unit float_image">
-	<div class="float_image-l1of4">
-		<div class="float_image-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
-		<p class="float_image-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
+<div class="unit float_media">
+	<div class="float_media-l1of4">
+		<div class="float_media-image"><img src="index.files/sampleimage.png" alt="サンプル画像" /></div>
+		<p class="float_media-caption">キャプションテキスト。キャプションテキスト。キャプションテキスト。</p>
 	</div>
-	<div class="float_image-body_rect">
+	<div class="float_media-body_rect">
 		<p>
-			ここは本文ブロックです。このサンプルは、25%の幅で左に回りこむ画像をレイアウトするものです。本文部分を矩形に保ちたい場合(画像を回り込ませたくない場合)は、本文部分のサブクラスを、 .float_image-body から .float_image-body_rect に変更します。<br />
+			ここは本文ブロックです。このサンプルは、25%の幅で左に回りこむ画像をレイアウトするものです。本文部分を矩形に保ちたい場合(画像を回り込ませたくない場合)は、本文部分のサブクラスを、 .float_media-body から .float_media-body_rect に変更します。<br />
 		</p>
 		<p>
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
@@ -441,17 +441,17 @@
 			ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。ここは本文ブロック。<br />
 		</p>
 	</div>
-</div><!-- /.float_image -->
+</div><!-- /.float_media -->
 <div class="unit">
-	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_image&quot;&gt;
-	&lt;div class=&quot;float_image-l1of4&quot;&gt;
-		&lt;div class=&quot;float_image-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
-		&lt;p class=&quot;float_image-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit float_media&quot;&gt;
+	&lt;div class=&quot;float_media-l1of4&quot;&gt;
+		&lt;div class=&quot;float_media-image&quot;&gt;&lt;img src=&quot;index.files/sampleimage.png&quot; alt=&quot;サンプル画像&quot; /&gt;&lt;/div&gt;
+		&lt;p class=&quot;float_media-caption&quot;&gt;キャプションテキスト。キャプションテキスト。キャプションテキスト。&lt;/p&gt;
 	&lt;/div&gt;
-	&lt;div class=&quot;float_image-body_rect&quot;&gt;
+	&lt;div class=&quot;float_media-body_rect&quot;&gt;
 		&lt;!-- insert parts modules --&gt;
 	&lt;/div&gt;
-&lt;/div&gt;&lt;!-- /.float_image --&gt;
+&lt;/div&gt;&lt;!-- /.float_media --&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
