ドキュメントモジュールの仕様を一部変更。
- .topic_box, .aside_box を追加。
- [unit].attention を [parts].attention_box に変更。
- そのほか表現上の小さな修正。
- モジュールとして hr を追加。
- モジュール命名規則の慣例として、*_box, *-last を追記。
- ページトップへ戻るのアンカー名を #page_top とした。テーマの該当箇所を更新。

--- a/htdocs/_PX/themes/sample/popup.html
+++ b/htdocs/_PX/themes/sample/popup.html
@@ -19,7 +19,7 @@
 ?>
 </head>
 <body>
-<div id="pagetop">
+<div id="page_top">
 <div class="theme_outline">
 <div class="theme_header">
 	<div class="logo"><?php print t::h($px->get_conf('project.name')); ?></div>
@@ -41,10 +41,10 @@
 </div><!-- /.theme_column2 -->
 </div><!-- /theme_.middle -->
 <div class="theme_footer">
-	<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
+	<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
 	<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
 </div><!-- /.theme_footer -->
 </div><!-- /.theme_outline -->
-</div><!-- /#pagetop -->
+</div><!-- /#page_top -->
 </body>
 </html>
