--- a/htdocs/_docs/modules/statics/index.html
+++ b/htdocs/_docs/modules/statics/index.html
@@ -65,7 +65,7 @@
 	<tbody>
 		<tr>
 			<th><div>.mt1em</div></th>
-			<td rowspan="3"><div>要素の上方にem単位のマージンをつけます。アンダースコアは小数点を表します。<code>.mt1p5em</code>は、1.5em(1 point 5)です。</div></td>
+			<td rowspan="3"><div>要素の上方にem単位のマージンをつけます。pは小数点(point)を表します。<code>.mt1p5em</code>は、1.5em(1 point 5)です。</div></td>
 		</tr>
 		<tr><th><div>.mt1p5em</div></th></tr>
 		<tr><th><div>.mt2em</div></th></tr>
@@ -91,7 +91,7 @@
 
 		<tr>
 			<th><div>.mb1em</div></th>
-			<td rowspan="3"><div>要素の下方にem単位のマージンをつけます。アンダースコアは小数点を表します。<code>.mb1p5em</code>は、1.5em(1 point 5)です。</div></td>
+			<td rowspan="3"><div>要素の下方にem単位のマージンをつけます。pは小数点(point)を表します。<code>.mb1p5em</code>は、1.5em(1 point 5)です。</div></td>
 		</tr>
 		<tr><th><div>.mb1p5em</div></th></tr>
 		<tr><th><div>.mb2em</div></th></tr>
@@ -167,7 +167,7 @@
 	<tbody>
 		<tr>
 			<th><div>.pt1em</div></th>
-			<td rowspan="3"><div>要素の上方にem単位のパディングをつけます。アンダースコアは小数点を表します。<code>.pt1p5em</code>は、1.5em(1 point 5)です。</div></td>
+			<td rowspan="3"><div>要素の上方にem単位のパディングをつけます。pは小数点(point)を表します。<code>.pt1p5em</code>は、1.5em(1 point 5)です。</div></td>
 		</tr>
 		<tr><th><div>.pt1p5em</div></th></tr>
 		<tr><th><div>.pt2em</div></th></tr>
@@ -193,7 +193,7 @@
 
 		<tr>
 			<th><div>.pb1em</div></th>
-			<td rowspan="3"><div>要素の下方にem単位のパディングをつけます。アンダースコアは小数点を表します。<code>.pb1p5em</code>は、1.5em(1 point 5)です。</div></td>
+			<td rowspan="3"><div>要素の下方にem単位のパディングをつけます。pは小数点(point)を表します。<code>.pb1p5em</code>は、1.5em(1 point 5)です。</div></td>
 		</tr>
 		<tr><th><div>.pb1p5em</div></th></tr>
 		<tr><th><div>.pb2em</div></th></tr>
