--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -24,7 +24,7 @@
 ?>
 	</head>
 	<body>
-		<div class="outline" id="pagetop">
+		<div class="outline" id="page_top">
 			<div class="header">
 				<div class="logo"><a href="<?php print t::h( $px->theme()->href('') ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
 			</div><!-- /.header -->
@@ -82,7 +82,7 @@
 				</div><!-- /.column2 -->
 			</div><!-- /.middle -->
 			<div class="footer">
-				<div class="right small">[<a href="#pagetop" class="up">ページの先頭へ戻る</a>]</div>
+				<div class="right small">[<a href="#page_top" class="up">ページの先頭へ戻る</a>]</div>
 				<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
 				<div class="center">[<?php print $px->theme()->mk_link(''); ?>]</div>
 			</div><!-- /.footer -->
