--- a/htdocs/_PX/themes/default/popup.html
+++ b/htdocs/_PX/themes/default/popup.html
@@ -24,7 +24,7 @@
 ?>
 	</head>
 	<body>
-		<div class="outline" id="pagetop">
+		<div class="outline" id="page_top">
 			<div class="header">
 				<div class="logo"><?php print t::h($px->get_conf('project.name')); ?></div>
 			</div><!-- /.header -->
@@ -45,7 +45,7 @@
 				</div><!-- /.column2 -->
 			</div><!-- /.middle -->
 			<div class="footer">
-				<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
+				<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
 				<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
 			</div><!-- /.footer -->
 		</div><!-- /.outline -->
