--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -19,7 +19,7 @@
 ?>
 </head>
 <body>
-<div id="pagetop">
+<div id="page_top">
 <div class="theme_outline">
 <div class="theme_header">
 	<div class="logo"><a href="<?php print t::h( $px->theme()->href('') ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
@@ -151,11 +151,11 @@
 </div><!-- /.theme_column2 -->
 </div><!-- /.theme_middle -->
 <div class="theme_footer">
-	<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
+	<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
 	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
 	<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
 </div><!-- /.theme_footer -->
 </div><!-- /.theme_outline -->
-</div><!-- /#pagetop -->
+</div><!-- /#page_top -->
 </body>
 </html>
