ドキュメントモジュールに、.anchor_links と .more_links を追加。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -1,6 +1,6 @@
 
 <p>
-	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、フレームワークが規定する標準のコーディング規則について説明します。<br />
+	このドキュメントは、コンテンツを構成するドキュメントモジュールの定義を含んだ、Pickles Framework が規定する標準のコーディング規則について説明します。<br />
 </p>
 
 <?php
@@ -85,6 +85,7 @@
 		<dd>
 			アンダースコア記法を基本とする。<br />
 			すべて小文字を使用する。<br />
+			数字を使用する場合に、アンダースコアで区切るか否かは任意とする。<br />
 			<span class="cont_exam">例: module_name</span><br />
 			<p>
 				ただし、サブモジュール(モジュールの一部として使用されることが前提となるクラス)については、属するモジュール名の後ろにハイフンでサブモジュール名を付加するように命名します。この場合、サブモジュール名は1つだけ指定できます(ハイフンは1度しか使えません)。<br />
@@ -104,6 +105,9 @@
 			<span class="cont_exam">例:hogeHoge()</span><br />
 		</dd>
 </dl>
+
+
+
 
 <h3>接頭辞 cont について</h3>
 <p>
@@ -144,6 +148,7 @@
 <p>
 	外部CSS、画像などのリソースファイルはこの中に管理するようにしてください。また、このディレクトリ内での格納規則や命名規則は設けません。<br />
 </p>
+
 
 <h3>コンテンツ独自CSSを定義する</h3>
 <p>
