--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -103,6 +103,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
+
 <h3>付加リンクモジュール</h3>
 
 <p>リンクモジュールには、任意の付加リンクモジュールを組み合わせて使用することができます。</p>
@@ -140,31 +141,31 @@
 	リストは、ul要素の代わりにol要素を使用することもできます。.more_links-heading の要素は削除しても構いません。また、p要素の他に、h2〜h6要素を使用することもできます。<br />
 </p>
 <div class="anchor_links">
-	<p class="more_links-heading">目次</p>
+	<p class="anchor_links-heading">目次</p>
 	<ul>
-		<li><a href="./">リンクリスト</a></li>
-		<li><a href="./">リンクリスト</a>
+		<li><a href="#">ページ内リンク</a></li>
+		<li><a href="#">ページ内リンク</a>
 		<ul>
-			<li><a href="./">リンクリスト</a></li>
-			<li><a href="./">リンクリスト</a></li>
+			<li><a href="#">ページ内リンク</a></li>
+			<li><a href="#">ページ内リンク</a></li>
 		</ul>
 		</li>
-		<li><a href="./">リンクリスト</a></li>
+		<li><a href="#">ページ内リンク</a></li>
 	</ul>
 </div><!-- /.anchor_links -->
 
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;anchor_links&quot;&gt;
-	&lt;p class=&quot;more_links-heading&quot;&gt;目次&lt;/p&gt;
+	&lt;p class=&quot;anchor_links-heading&quot;&gt;目次&lt;/p&gt;
 	&lt;ul&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;
+		&lt;li&gt;&lt;a href=&quot;#&quot;&gt;ページ内リンク&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;#&quot;&gt;ページ内リンク&lt;/a&gt;
 		&lt;ul&gt;
-			&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
-			&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;a href=&quot;#&quot;&gt;ページ内リンク&lt;/a&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;a href=&quot;#&quot;&gt;ページ内リンク&lt;/a&gt;&lt;/li&gt;
 		&lt;/ul&gt;
 		&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;#&quot;&gt;ページ内リンク&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;&lt;!-- /.anchor_links --&gt;
 </textarea></div>
@@ -176,23 +177,33 @@
 </p>
 <div class="more_links">
 	<ul>
-		<li><a href="./">リンクリスト</a></li>
-		<li><a href="./">リンクリスト</a></li>
-		<li><a href="./">リンクリスト</a></li>
+		<li><a href="./">詳しくはこちら</a></li>
+		<li><a href="./">詳しくはこちら</a></li>
+		<li><a href="./">詳しくはこちら</a></li>
 	</ul>
 </div><!-- /.more_links -->
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;more_links&quot;&gt;
 	&lt;ul&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;リンクリスト&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;詳しくはこちら&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;詳しくはこちら&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;./&quot;&gt;詳しくはこちら&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;&lt;!-- /.more_links --&gt;
 </textarea></div>
 </div>
 
 
+<span id="hash_ページトップリンク .page_top"></span><h3>ページトップリンク .page_top</h3>
+<div class="page_top">
+	<p><a href="#page_top">ページの先頭へ戻る</a></p>
+</div><!-- /.page_top -->
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;page_top&quot;&gt;
+	&lt;p&gt;&lt;a href=&quot;#page_top&quot;&gt;ページの先頭へ戻る&lt;/a&gt;&lt;/p&gt;
+&lt;/div&gt;&lt;!-- /.page_top --&gt;
+</textarea></div>
+</div>
 
 
 <h2>その他のインライン要素</h2>
