form要素をinlineにするのをやめた。
- 「学習しやすさを重視する。可能な限り、素のHTMLの構造のままでマークアップできるように設計する」の方針と矛盾するため。
- class="inline" を都度設定することにする。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -604,7 +604,7 @@
 
 <h2>フォーム .form_elements</h2>
 
-<form action="#" method="post">
+<form action="#" method="post" class="inline">
 <h3>フォーム要素</h3>
 <div class="unit">
 <table class="form_elements">
