--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -540,7 +540,7 @@
 
 <h3>送信系ボタン</h3>
 
-<form action="#" method="post">
+<form action="#" method="post" class="inline">
 <div class="unit form_buttons">
 	<ul>
 		<li class="form_buttons-submit"><input type="submit" name="" value="確認する" /></li>
@@ -556,7 +556,7 @@
 </div><!-- /.unit -->
 </form>
 
-<form action="#" method="post">
+<form action="#" method="post" class="inline">
 <div class="unit form_buttons">
 	<ul>
 		<li class="form_buttons-submit"><input type="submit" name="" value="送信する" /></li>
@@ -576,7 +576,7 @@
 
 <h3>キャンセルボタン</h3>
 
-<form action="#" method="post">
+<form action="#" method="post" class="inline">
 <div class="unit form_buttons">
 	<ul>
 		<li class="form_buttons-cancel"><input type="submit" name="" value="キャンセル" /></li>
