--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -11,7 +11,7 @@
 */ ?>
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 <?php
-	include( $px->get_theme_resource_dir_realpath().'inc/setup.inc' );
+	include( $px->realpath_theme_files().'inc/setup.inc' );
 
 	//↓コンテンツから受け取った
 	//	headセクション内用のソースを出力しています。
