ドキュメントモジュール .anchor_links が、IE7で表示くずれを起こすことがある不具合を修正。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -225,12 +225,22 @@
 
 <ul>
 	<li>リスト内容</li>
-	<li>リスト内容</li>
+	<li>リスト内容
+		<ul>
+			<li>リスト内容</li>
+			<li>リスト内容</li>
+		</ul>
+	</li>
 </ul>
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;ul&gt;
 	&lt;li&gt;リスト内容&lt;/li&gt;
-	&lt;li&gt;リスト内容&lt;/li&gt;
+	&lt;li&gt;リスト内容
+		&lt;ul&gt;
+			&lt;li&gt;リスト内容&lt;/li&gt;
+			&lt;li&gt;リスト内容&lt;/li&gt;
+		&lt;/ul&gt;
+	&lt;/li&gt;
 &lt;/ul&gt;
 </textarea></div>
 </div><!-- /.unit -->
@@ -283,16 +293,27 @@
 
 <ol>
 	<li>リスト内容</li>
-	<li>リスト内容</li>
+	<li>リスト内容
+		<ol>
+			<li>リスト内容</li>
+			<li>リスト内容</li>
+		</ol>
+	</li>
 </ol>
 
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;ol&gt;
 	&lt;li&gt;リスト内容&lt;/li&gt;
-	&lt;li&gt;リスト内容&lt;/li&gt;
+	&lt;li&gt;リスト内容
+		&lt;ol&gt;
+			&lt;li&gt;リスト内容&lt;/li&gt;
+			&lt;li&gt;リスト内容&lt;/li&gt;
+		&lt;/ol&gt;
+	&lt;/li&gt;
 &lt;/ol&gt;
 </textarea></div>
-</div><!-- /.unit -->
+</div>
+
 
 
 <h2>定義・説明リスト</h2>
