ドキュメント更新。
- JavaScriptライブラリの読み込みに関する記述を一部調整。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -197,17 +197,19 @@
 	以下のライブラリは、テーマにより標準的にロードするため、コンテンツが明示的にロードする必要はありません。<br />
 </p>
 <ul>
-	<li>jQuery</li>
+	<li>jQuery (1.7.2)</li>
 </ul>
 
 <h4>コンテンツによって必要な場合にロードできる共有ライブラリ</h4>
 <p>
-	以下のライブラリは、共有リソースとしてテーマによって用意されているが、特にコンテンツが必要としない限り、ロードはされません。<br />
+	以下のライブラリは、共有リソースとしてテーマによって用意されていますが、特にコンテンツが必要としない限り、ロードはされません。<br />
 </p>
 <ul>
 	<li>(未定義)</li>
 </ul>
-
+<ul class="notes">
+	<li class="notes-li">※初期状態では、定義された項目はありません。プロジェクトごとに、必要に応じて項目を追加してください。</li>
+</ul>
 
 <h3>&lt;head&gt;領域にJavaScriptやCSSを書くには</h3>
 
