コーディング規約の更新。ほか
- jQuery を 1.7.2 から 1.10.1 に更新。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -194,7 +194,7 @@
 </div>
 
 
-<span id="hash_ページトップリンク .page_top"></span><h3>ページトップリンク .page_top</h3>
+<h3>ページトップリンク .page_top</h3>
 <div class="page_top">
 	<p><a href="#page_top">ページの先頭へ戻る</a></p>
 </div><!-- /.page_top -->
@@ -312,8 +312,7 @@
 	&lt;/li&gt;
 &lt;/ol&gt;
 </textarea></div>
-</div>
-
+</div><!-- /.unit -->
 
 
 <h2>定義・説明リスト</h2>
