--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -150,7 +150,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>変則4分割</h3>
+<h3>変則2分割</h3>
 <div class="cols unit">
 	<div class="cols-col cols-3of4"><div class="cols-pad">
 		<p>cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。</p>
@@ -177,7 +177,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>変則4分割</h3>
+<h3>変則3分割</h3>
 <div class="cols unit">
 	<div class="cols-col cols-1of4"><div class="cols-pad">
 		<p>カラム</p>
@@ -456,9 +456,15 @@
 </div><!-- /.unit -->
 
 
-
-
 <h2>サムネイルリスト .thumb_list</h2>
+
+<!--
+UTODO: ガイドラインを提示すべき。
+<p>サムネイルリストの中身の要素は、次の方針に沿って管理者が定義してください。</p>
+<p>★★★拡張の方針を記載★★★</p>
+-->
+
+
 <div class="unit thumb_list">
 	<ul>
 		<li><div class="thumb_list-pad"><a href="#"><img src="index.files/sampleimage.png" alt="サンプル画像" /><span class="thumb_list-caption">サムネイルラベル</span></a></div></li>
