--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -288,6 +288,29 @@
 </div><!-- /.unit -->
 
 
+<h3>水平並びリスト ul.horizontal</h3>
+<p>
+	水平並びリストは、ul要素によるリスト構造を水平方向に横並びにレイアウトします。リストの階層は1階層まで可能で、ネストすることはできません。<br />
+</p>
+
+<ul class="horizontal">
+	<li class="horizontal-li">リスト内容</li>
+	<li class="horizontal-li">リスト内容</li>
+	<li class="horizontal-li">リスト内容</li>
+	<li class="horizontal-li">リスト内容</li>
+</ul>
+
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;ul class=&quot;horizontal&quot;&gt;
+	&lt;li class=&quot;horizontal-li&quot;&gt;リスト内容&lt;/li&gt;
+	&lt;li class=&quot;horizontal-li&quot;&gt;リスト内容&lt;/li&gt;
+	&lt;li class=&quot;horizontal-li&quot;&gt;リスト内容&lt;/li&gt;
+	&lt;li class=&quot;horizontal-li&quot;&gt;リスト内容&lt;/li&gt;
+&lt;/ul&gt;
+</textarea></div>
+</div>
+
+
 
 <h2>数字リスト</h2>
 
