モジュール集の一部レイアウトを調整。内容に変更はない。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -577,18 +577,21 @@
 	</thead>
 	<tbody>
 		<tr>
-			<th>.aural</th>
+			<th style="width:20%;">.aural</th>
 			<td>読み上げブラウザ対応のための隠しナビゲーションを表現します。視覚メディアには表示されませんが、音声読み上げブラウザには読み上げられます。</td>
-			<td>
-				&lt;div class=&quot;aural&quot;&gt;&lt;a href=&quot;#content&quot;&gt;本文へ&lt;/a&gt;&lt;/div&gt;<br />
-				<br />
-				&lt;div class=&quot;breadcrumb&quot;&gt;<br />
-					&lt;span class=&quot;aural&quot;&gt;現在のページ:&lt;/span&gt;<br />
-					&lt;ul&gt;<br />
-						&lt;li&gt;&lt;a href=&quot;/&quot;&gt;ホーム&lt;/a&gt;&lt;/li&gt;<br />
-						&lt;li&gt;&amp;gt; ページA&lt;/li&gt;<br />
-					&lt;/ul&gt;<br />
-				&lt;/div&gt;<br />
+			<td style="width:50%;">
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;aural&quot;&gt;&lt;a href=&quot;#content&quot;&gt;本文へ&lt;/a&gt;&lt;/div&gt;
+
+&lt;div class=&quot;breadcrumb&quot;&gt;
+&lt;span class=&quot;aural&quot;&gt;現在のページ:&lt;/span&gt;
+&lt;ul&gt;
+&lt;li&gt;&lt;a href=&quot;/&quot;&gt;ホーム&lt;/a&gt;&lt;/li&gt;
+&lt;li&gt;&amp;gt; ページA&lt;/li&gt;
+&lt;/ul&gt;
+&lt;/div&gt;
+</textarea></div>
+</div>
 			</td>
 		</tr>
 	</tbody>
